# agent-project-showcase

./: README.md  SOURCE_MAP.md  pyproject.toml
src/agent_showcase/: __init__.py  cases.py  pipelines.py  types.py
tests/: test_cases.py
