[project]
name = "agent-project-showcase"
version = "0.1.0"
description = "A four-track multi-agent showcase repo for application materials"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
